updAvatart upd
